[board] make sure the main-link is not covered
as it was on workdir lists, and maybe elsewhere.

--- a/accelerator/board/style.css
+++ b/accelerator/board/style.css
@@ -134,6 +134,7 @@ input:disabled {
 	position: absolute;
 	top: 1.7em;
 	right: 0.4em;
+	z-index: 2;
 }
 .error, input:focus.error {
 	background: var(--bgerr);
